resp to command